corrected typos in listings.html file

--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -80,7 +80,7 @@
       {% endfor %}
       {% else %}
       <div class="col-md-12">
-          <p>No Lisitngs Available</p>
+          <p>No Listings Available</p>
       </div>
       {% endif %}
   
