--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -67,6 +67,8 @@
       </div>
     </div>
   </section>
+  <!-- Alerts -->
+  {% include 'partials/_alerts.html'%}
 
   <!-- Listings -->
   <section id="listings" class="py-5">
